Fixed text alignment in content-tables. Adjusted spacing on Awards page. Fixed CSS class on FAQ page.

--- a/styles.css
+++ b/styles.css
@@ -131,6 +131,7 @@ table {
 	height:85%;
 	border:2px solid black;
 	border-collapse:collapse;
+	text-align:center;
 }
 
 .half-content {
